# cellink

./: .cruft.json  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  README.md  annb_res.txt  baseline_res.txt  donor_data_pilot.ipynb  main.py  pyproject.toml  test_new_functions.py
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: release.yaml  test.yaml
configs/: favor.yaml  magma.yaml  vep.yaml  vep_offline.yaml  vep_offline_local.yaml
docs/: api.md  conf.py  contributing.md  index.md  single_cell_siletti_duncan_merge_anndatas.ipynb
docs/api/: at.md  cli.md  donordata.md  index.md  io.md  ml.md  pl.md  pp.md  resources.md  tl.md  tl_external.md  utils.md
docs/configs/: favor_config.yaml  snpeff_config.yaml  vep_config.yaml  vep_config_local.yaml  vep_config_offline.yaml
docs/example/: config.yaml
docs/notebooks/: 08_10_24_hackathon_gwas_single_gene.ipynb  burden_testing.ipynb  burden_testing2.ipynb  burden_testing_mai.ipynb  burden_testing_mai2.ipynb  burden_testing_merit.ipynb  burden_testing_students.ipynb  burden_testing_tanja.ipynb  compute_burdens_merit.ipynb  donordata_pseudobulk.ipynb  eqtl_pipeline.ipynb  eqtl_pipeline_all_cells_all_chromosomes.ipynb  eqtl_pipeline_new.ipynb  eva_results_mai.ipynb  eval_data.ipynb  eval_results.ipynb  eval_results_NewDNALM.ipynb  eval_results_combine_chromosomes.ipynb  eval_results_expression.ipynb  eval_results_summary.ipynb  eval_results_summary_plots.ipynb  eval_results_tanja.ipynb  example.ipynb  example_eqtl.ipynb  example_eqtl_all_cell_types_using_annotated_csv.ipynb  example_eqtl_all_cell_types_using_annotated_csv_all_variants.ipynb  example_eqtl_all_cell_types_using_annotated_csv_c4b_cells.ipynb  example_eqtl_all_cell_types_using_biomart_annotations.ipynb  example_eqtl_pipeline.ipynb  example_eqtl_with_sc_eqtl.ipynb  examply_eqtl_pipeline.ipynb  explore_annotations.ipynb  explore_vcf2zarr.ipynb  gwas.py  ldsc_regression.ipynb  plotting_eqtl_results.ipynb  plotting_functions.py  plotting_report.py
docs/slurm/: compute_gene_loc.sh  compute_gene_locations.py  error_burden_testing.txt  out_burden_testing.txt  run_burden_test.py  slurm_burden_testing.sh
docs/tutorials/: benchmark_alternatives.py  benchmark_loader_c.py  benchmark_loader_g.py  benchmark_next.py  burden_testing.ipynb  burden_testing.py  burden_testing_refactored.ipynb  burden_testing_refactored_eshg.ipynb  burden_testing_refactored_eshg.py  cell_level_ldsc_analysis.ipynb  cell_level_ldsc_analysis_updates.ipynb  cellex.ipynb  clumping_pruning.ipynb  colocalization.ipynb  donordata_basics.ipynb  ehrdataset.ipynb  example.ipynb  explore_annotations.ipynb  explore_annotations_refactored.ipynb  explore_annotations_refactored_eshg.ipynb  explore_vcf2zarr.ipynb  generate_dummy_onek1k.py  gsmap.ipynb  index.md  ldsc_duncan_merge_anndatas.ipynb  livi.ipynb  livi_annb.ipynb  livi_annb.py  livi_annbatch_cis_train.py  livi_annbatch_cis_train_realistic.py  livi_annbatch_model_train.py  livi_annbatch_train.py  livi_baseline_cis_train.py  livi_baseline_cis_train_realistic.py  livi_baseline_train.py  livi_train.py  magma_analysis_tutorial.ipynb  prepare_onek1k1_data.ipynb  profile_internals.py  profile_yields.py  (+11 more)
docs/tutorials/create_gdata/: 01_vcf_to_plink.py  02_geno_pcs.py  03_kinship.py  04_create_gdata.ipynb
runs/: run_eqtl.py
runs/config/: eqtl.yaml
runs/config/data/: debug.yaml  default.yaml
runs/config/eqtl/: default.yaml
runs/config/paths/: debug_hpc.yaml  debug_local.yaml  default.yaml  default_hpc.yaml  default_local.yaml
runs/config/run/: default.yaml
runs/slurms/: launch_jobs.sbash  launch_jobs_all_cell_types.sbash  launch_jobs_six_most_frequent_cell_types.sbash  launch_only_one_job.sbash
src/burden_eval/: Snakefile  Snakemake  burden_slurm.sh  log.err  out_burden.txt  out_burden_dry-run.txt  run_burden_ass.py  run_burden_testing.py  run_compute_burdens.py  run_data_annotation.py  run_snakemake_tanja_mais_version.sh
src/burden_eval/burden_testing_logs/: 18_data_anno_stderr.err  22_burden_ass_stderr.err  22_burden_comp_stderr.err  3_data_anno_stderr.err
src/burden_eval/data_analysis/: analysis.py  err_data_analysis.txt  out_data_analysis.txt  run_analysis.sh
src/burden_eval/slurm/: burden_slurm.sh  slurm-sidecar.py  slurm-status.py  slurm-status.sh
src/cellink/: __init__.py  cellink_donordata_dataloader_test.py  cellink_test.py
tests/: conftest.py  test_annbatch_io.py  test_at.py  test_basic.py  test_cli.py  test_donor_data.py  test_io.py  test_lazy_donordata.py  test_ml.py  test_pl.py  test_pp.py  test_tl.py  test_tl_external.py  test_tools.py  test_utils.py
tests/data/: generate_test_data.py  simulated_genotype_calls.bed  simulated_genotype_calls.bgen  simulated_genotype_calls.bim  simulated_genotype_calls.fam  simulated_genotype_calls.pgen  simulated_genotype_calls.psam  simulated_genotype_calls.pvar  simulated_genotype_calls.sample  simulated_genotype_calls_dosage_per_strand.npy  simulated_genotype_calls_one_hot_encoded.npy  test_variants_vep_annotated.txt  variants_vep_annotated2.txt
tmp_jan_eqtl/: example_eqtl.ipynb  utils.py
(+119 files in other folders)
