[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "cellink"
version = "0.0.1"
description = "cellink enables genetic analyses on single-cell data"
readme = "README.md"
license = { file = "LICENSE" }
maintainers = [
  { name = "Jan Engelmann", email = "jan.engelmann@helmholtz-munich.de" },
]
authors = [
  { name = "Jan Engelmann" },
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "adjusttext",
  "anndata",
  "bed-reader",
  "dask",
  "limix-core",
  "muon",
  "pandas",
  "pandas-plink",
  "pandera",
  "polars",
  "regex",
  "requests",
  "rich",
  "scanpy",
  # for debug logging (referenced from the issue template)
  "session-info",
  "sgkit[plink]", # TODO cbgen is a pain to install on mac. I think cmake issues.
]

optional-dependencies.datasets = [
  "liftover",
]

optional-dependencies.dev = [
  "pre-commit",
  "twine>=4.0.2",
]
optional-dependencies.doc = [
  "docutils>=0.8,!=0.18.*,!=0.19.*",
  "ipykernel",
  "ipython",
  "myst-nb>=1.1",
  # Until pybtex >0.23.0 releases: https://bitbucket.org/pybtex-devs/pybtex/issues/169/
  "setuptools",
  "sphinx>=4",
  "sphinx-autodoc-typehints",
  "sphinx-book-theme>=1",
  "sphinx-copybutton",
  "sphinx-tabs",
  "sphinxcontrib-bibtex>=1",
  "sphinxext-opengraph",
]
optional-dependencies.ensembl-vep = [
  # not available via pip, has to be installed via conda install bioconda::ensembl-vep
  #  "ensembl-vep",
]

optional-dependencies.ldsc = [
  #TODO ARNOLDT
  "gsmap",
]
optional-dependencies.mixmil = [
  "mixmil",
]
optional-dependencies.ml = [
  "pytorch-lightning",
]
optional-dependencies.rvat = [
  # installation wit pip doesn't work, install via conda install -c conda-forge chiscore
  # "chiscore",
  "limix-core",
  "pybiomart",
]
optional-dependencies.snpeff = [
  # not available via pip, has to be installed via conda install bioconda::snpeff
  # "snpeff",
]
optional-dependencies.tensorqtl = [
  "tensorqtl",
  #"plink2"
]
optional-dependencies.test = [
  "coverage",
  "pytest",
]
# https://docs.pypi.org/project_metadata/#project-urls
urls.Documentation = "https://cellink.readthedocs.io/"
urls.Homepage = "https://github.com/theislab/sc-genetics"
urls.Source = "https://github.com/theislab/sc-genetics"

[tool.hatch.build.targets.wheel]
packages = [ "src/cellink" ]

[tool.hatch.envs.default]
installer = "uv"
features = [ "dev" ]

[tool.hatch.envs.docs]
extra-features = [ "doc" ]
scripts.build = "sphinx-build -M html docs docs/_build {args}"
scripts.open = "python -m webbrowser -t docs/_build/html/index.html"
scripts.clean = "git clean -fdX -- {args:docs}"

[tool.hatch.envs.hatch-test]
features = [ "test" ]

[tool.ruff]
line-length = 120
src = [ "src" ]
extend-include = [ "*.ipynb" ]

format.docstring-code-format = true

lint.select = [
  "B",      # flake8-bugbear
  "BLE",    # flake8-blind-except
  "C4",     # flake8-comprehensions
  "D",      # pydocstyle
  "E",      # Error detected by Pycodestyle
  "F",      # Errors detected by Pyflakes
  "I",      # isort
  "RUF100", # Report unused noqa directives
  "TID",    # flake8-tidy-imports
  "UP",     # pyupgrade
  "W",      # Warning detected by Pycodestyle
]
lint.ignore = [
  "B008", # Errors from function calls in argument defaults. These are fine when the result is immutable.
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # __magic__ methods are often self-explanatory, allow missing docstrings
  "D107", # Missing docstring in __init__
  # Disable one in each pair of mutually incompatible rules
  "D203", # We don’t want a blank line before a class docstring
  "D213", # <> We want docstrings to start immediately after the opening triple quote
  "D400", # first line should end with a period [Bug: doesn’t work with single-line docstrings]
  "D401", # First line should be in imperative mood; try rephrasing
  "E501", # line too long -> we accept long comment lines; formatter gets rid of long code lines
  "E731", # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
  "E741", # allow I, O, l as variable names -> I is the identity matrix
]
lint.per-file-ignores."*/__init__.py" = [ "F401" ]
lint.per-file-ignores."docs/*" = [ "I" ]
lint.per-file-ignores."tests/*" = [ "D" ]
lint.pydocstyle.convention = "numpy"

[tool.pytest.ini_options]
testpaths = [ "tests" ]
xfail_strict = true
addopts = [
  "--import-mode=importlib", # allow using test files with same name
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = [ "cellink" ]
omit = [
  "**/test_*.py",
]

[tool.cruft]
skip = [
  "tests",
  "src/**/__init__.py",
  "src/**/basic.py",
  "docs/api.md",
  "docs/changelog.md",
  "docs/references.bib",
  "docs/references.md",
  "docs/notebooks/example.ipynb",
]
